fix mobile spacing

--- a/src/style.scss
+++ b/src/style.scss
@@ -566,12 +566,12 @@ a {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	max-width: 86vw;
+	max-width: 88vw;
 	padding: 1em 1em;
 	margin-top: 2em;
 	margin-bottom: 2em;
-	margin-left: 0em;
-	margin-right: 0em;
+	margin-left: -0.2em;
+	margin-right: -0.2em;
 	cursor: pointer;
 	transition: transform 0.6s ease-in-out, background 0.6s ease-in-out;
 }
